# build_ws

foxy/foxy_ws/install/: local_setup.sh  setup.sh
foxy/foxy_ws/install/include/fastrtps/: config.h
foxy/foxy_ws/install/lib/: libspdlog.so.1.5.0
foxy/foxy_ws/install/lib/tracetools/: status
foxy/foxy_ws/install/share/action_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
foxy/foxy_ws/install/share/ament_cmake/: local_setup.sh  package.sh
foxy/foxy_ws/install/share/ament_cmake_copyright/: local_setup.sh  package.sh
foxy/foxy_ws/install/share/ament_cmake_core/: package.dsv  package.ps1  package.sh
foxy/foxy_ws/install/share/ament_cmake_cppcheck/: local_setup.sh  package.sh
foxy/foxy_ws/install/share/ament_cmake_cpplint/: local_setup.sh  package.sh
foxy/foxy_ws/install/share/ament_cmake_export_definitions/: package.dsv  package.ps1  package.sh
foxy/foxy_ws/install/share/ament_cmake_export_dependencies/: local_setup.sh  package.sh
foxy/foxy_ws/install/share/ament_cmake_export_include_directories/: local_setup.sh  package.dsv  package.ps1  package.sh
foxy/foxy_ws/install/share/ament_cmake_export_interfaces/: package.sh
foxy/foxy_ws/install/share/ament_cmake_export_libraries/: package.sh
foxy/foxy_ws/log/: latest_build
foxy/isaac_sim_ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
foxy/isaac_sim_ros_ws/log/: latest_build
foxy/isaac_sim_ros_ws/src/icrane_msgs/: CMakeLists.txt  README.md  package.xml
foxy/isaac_sim_ros_ws/src/icrane_msgs/msg/: Detection2D.msg  DetectionSeg2D.msg  Modeling.msg
(+536 files in other folders)
